--- a/shared/services/configuration.json
+++ b/shared/services/configuration.json
@@ -1,4 +1,5 @@
 {
     "wsUrlformel": "https://kusala.fr/yeshe/api/",
-    "imagePath": "https://kusala.fr/yeshe/"
+    "imagePath": "https://kusala.fr/yeshe/",
+    "dklLibraryPath": "https://www.kusala.fr/yeshe/#/"
 }
