--- a/shared/assets/configuration.json
+++ b/shared/assets/configuration.json
@@ -1,5 +1,6 @@
 {
-    "wsUrlformel": "https://kusala.fr/yeshe/api/",
+    "wsUrlformel": "https://oldyeshe.kusala.fr/yeshe/api/",
     "imagePath": "https://kusala.fr/yeshe/",
-    "dklLibraryPath": "https://www.kusala.fr/yeshe/#/"
+    "dklLibraryPath": "https://www.kusala.fr/yeshe/#/",
+    "version": "Powered by Dhagpo Kagyu Librairies - Yeshe App - v 5.0.12  - 31/01/2026"
 }
